tests/negative/core-no-device.rwc
-- EXPECT-ERROR: no device declaration
$LL.Main.f : ([8]) -> [8]
$LL.Main.f $0 =
      $0
